--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="basket.css">
+        <link rel="stylesheet" href="index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
@@ -28,6 +28,6 @@
             </div>
         </div>
         <button id="replay" onclick="playAgain()">New Game</button>
-        <script src="basket.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
